force-app/main/default/objects/Log__c/fields/Estado_Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Estado_Oportunidad__c</fullName>
    <formula>TEXT(L_nea_de_Proyecto__r.Oportunidad__r.StageName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estado Oportunidad</label>
    <type>Text</type>
</CustomField>