force-app/main/default/objects/Log__c/fields/Gerencia__c.field-meta.xml
<CustomField>
    <fullName>Gerencia__c</fullName>
    <label>Gerencia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Gerencias</valueSetName>
    </valueSet>
</CustomField>