force-app/main/default/objects/Log__c/fields/L_nea_de_Proyecto__c.field-meta.xml
<CustomField>
    <fullName>L_nea_de_Proyecto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Linea de proyecto que falla</description>
    <label>Línea de Proyecto</label>
    <referenceTo>Linea_de_Proyecto__c</referenceTo>
    <relationshipLabel>Logs</relationshipLabel>
    <relationshipName>Logs</relationshipName>
    <type>Lookup</type>
</CustomField>