force-app/main/default/objects/Log__c/fields/Nombre_Completo_Propietario__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Completo_Propietario__c</fullName>
    <formula>Owner:User.FirstName  +  Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre Completo Propietario</label>
    <type>Text</type>
</CustomField>