force-app/main/default/objects/Log__c/fields/Propietario_de_PEP__c.field-meta.xml
<CustomField>
    <fullName>Propietario_de_PEP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Usuario</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Logs</relationshipName>
    <type>Lookup</type>
</CustomField>