force-app/main/default/objects/Log__c/fields/Sincronizada__c.field-meta.xml
<CustomField>
    <fullName>Sincronizada__c</fullName>
    <formula>L_nea_de_Proyecto__r.Sincronizado_SAP_Preventa__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sincronizada</label>
    <type>Checkbox</type>
</CustomField>