force-app/main/default/objects/Log__c/fields/Synched_with_EPPM__c.field-meta.xml
<CustomField>
    <fullName>Synched_with_EPPM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Synched with EPPM</label>
    <type>Checkbox</type>
</CustomField>