force-app/main/default/objects/Log__c/fields/XML_Request__c.field-meta.xml
<CustomField>
    <fullName>XML_Request__c</fullName>
    <label>XML_Request</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>