force-app/main/default/objects/Log__c/fields/XML_Response__c.field-meta.xml
<CustomField>
    <fullName>XML_Response__c</fullName>
    <label>XML_Response</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>