force-app/main/default/objects/Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Metodo__c</columns>
    <columns>Descripcion__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>